Fix: Updated project details